fix(game.css): fixed double grid problem on small devices or if you zoom out #Trainee-186
#Trainee-186

--- a/Yoo.Trainees.WarShip/Frontend/css/game-pve.css
+++ b/Yoo.Trainees.WarShip/Frontend/css/game-pve.css
@@ -48,6 +48,16 @@
   src: url(../font/BadGrunge.ttf);
 }
 
+@media screen and (max-width: 900px) {
+  .middle {
+    grid-template-areas:
+      "ship player1"
+      "chatbox player2" !important;
+    grid-template-columns: 0.5fr 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+}
+
 body {
   cursor: crosshair;
 }
@@ -96,6 +106,7 @@ body {
 
 .middle {
   display: grid;
+  position: relative;
   margin-top: -2rem;
   grid-template-areas: "ship player1 player2 chatbox";
   grid-template-columns: 0.5fr 1fr 1fr 0.5fr;
@@ -127,15 +138,16 @@ body {
 }
 
 .board {
+  display: inline-grid;
   background-color: rgba(128, 128, 128, 0.5);
   border: 2px solid var(--white);
   box-shadow: inset 0px 0px 5px 7px rgba(128, 128, 128, 0.75);
-  width: 520px;
-  height: 520px;
-  display: grid;
   grid-template-columns: repeat(10, 1fr);
+  border-collapse: collapse;
   align-self: center;
-  position: relative;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .finish {
@@ -603,12 +615,12 @@ span {
   grid-template-areas:
     "user"
     "message send";
+  grid-area: chatbox;
   flex-direction: column;
   align-items: center;
   margin: 1rem 1rem 1rem 4rem;
   padding: 1rem;
-  position: absolute;
-  right: 0%;
+
   height: 660px;
   width: 300px;
   background-color: rgba(128, 128, 128, 0.5);
