--- a/Yoo.Trainees.WarShip/Frontend/css/layout.css
+++ b/Yoo.Trainees.WarShip/Frontend/css/layout.css
@@ -62,8 +62,8 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   z-index: -1;
   background: url(../img/background.png) no-repeat center fixed;
   background-size: cover;
